--- a/15.11/index.html
+++ b/15.11/index.html
@@ -13,11 +13,12 @@
 
       <p>In questo momento sei <strong id="connection">online</strong>.</p>
 
-      <ul id="todos">
+      <ul class="container" id="todos">
         <li>
           <label><input type="checkbox"/> delectus aut autem</label>
         </li>
       </ul>
+      <button id="add">Aggiungi</button>
       
     </main>
 
