--- a/15.11/esercizio/index.html
+++ b/15.11/esercizio/index.html
@@ -8,21 +8,16 @@
     <title>Widget ToDo</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="index.js" type="module"></script>
+    <script src="js/index.js" type="module"></script>
 </head>
 
 <body>
     <main>
         <h1>widget todo</h1>
         <hr>
-            <ul class="container">
-                <li>
-                    <label><input type="checkbox">
-                        segnaposto
-                    </label>
-                </li>
-            </ul>
-            <button id="add">Aggiungi</button>
+        <div id="container">
+        <button id="add">Aggiungi</button>
+        </div>
     </main>
 </body>
 
