--- a/15.11/teoria/index.html
+++ b/15.11/teoria/index.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Edgemony movie databse</title>
+
     <link rel="stylesheet" href="style.css" />
     <script src="js/index.js" type="module"></script>
   </head>
+
   <body>
+    <div class="alert"><p>Something is not working</p></div>
     <main>
       <h1>Edgemony movie database</h1>
       <hr />
       <div id="container">
         <p class="loading">Caricamento in corso...</p>
       </div>
-      <button id="add">Aggiungi una nuova scheda</button>
+      
       <footer>
         <p>Copyright 2021 - Edgemony</p>
       </footer>
